# magistra-darbs

./: .env.example  .gitignore  README.md  pyproject.toml
.docs/graphrag/: 10_module_groups.yaml  11_module_docs.yaml  12_architecture_diagram.yaml  13_proposed_toc.yaml  14_confirmed_toc.yaml  15_synthesis_doc.yaml  1_file_tree.yaml  2_node_extraction.yaml  2b_test_mapping.yaml  3_doc_order.yaml  4_llm_summary_iter1.yaml  5_function_docs.yaml  6_class_groups.yaml  7_class_docs.yaml  8_file_groups.yaml  9_file_docs.yaml  combined_docs.json
.docs/graphrag/checkpoints/: checkpoints.db
.docs/graphrag/site/: docusaurus.config.js  package-lock.json  package.json
docgen/: README.md  __init__.py  main.py
docgen/analyzer/: __init__.py  builtins.py  call_resolver.py  code_parser.py  dependency_analyzer.py  markdown_finder.py  source_finder.py  test_mapper.py  topological_sort.py
docgen/llm/: __init__.py  client.py  doc_generator.py  embeddings.py  langfuse_client.py  prompts.py  schemas.py  structured_client.py  validation.py
docgen/llm/graph/: graph.py  (+3 more)
docgen/scripts/: init_docusaurus_site.py
docgen/tests/: test_code_parser.py
docgen/utils/: __init__.py  config.py  generate_docs.py  logger.py  repo_fetcher.py  test_langfuse.py
eval/: README.md  combine_docs.py  combine_docs_for_wikibench.py  evaluate_docs.py  main.py
eval/result_analysis/: chart.py  chart_graphrag.py  chart_rasa.py
tests/: test_topological_sort.py
web/: README.md  kill_stuck_jobs.sh  run.sh
web/backend/: main.py  requirements.txt
web/frontend/: index.html  package-lock.json  package.json
(+1128 files in other folders)
